# zanalytics-quant

./: .dockerignore  .env  .env copy 2.template  .env copy.template  .env.discord  .env.sample  .env.template  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.debug  Dockerfile.predict-cron  Dockerfile.pulse-api  Dockerfile.tick-to-bar  Dockerfile.ticktobar  INSTALL.md  LICENSE  Makefile  PULSE_INTEGRATION_PLAN.md  PULSE_WYCKOFF_LIVE_README.md  README.md  README_PULSE.md  ZANALYTICS_PULSE_STAKEHOLDER_UPDATE.md  app.py  change-ritual.sh  check_celery.sh  cluster_memory.py  confidence_trace_matrix.json  confluence_scorer.py  constraints.txt  conversation_starter.md  correlation_intelligence_engine.py  dash.md  dependency-tree.txt  dependency_audit.md  diagnose_and_fix.sh  django_tick_endpoint.py  docker-compose copy.yml_old  (+58 more)
.codex/: config.yaml
ETL/: Dockerfile  README.md
LLM/: Whisper Ack-Act UI Additions.py  prometheus_strategy_prompt.yaml  whisperer_cookbook.yaml
SRB/: README.md  instructions.md
_new/: PRODUCTION_LAUNCH_CHECKLIST.md  README_PULSE.md  ZANALYTICS_PULSE_STAKEHOLDER_UPDATE.md  confluence_scorer.py  deployment_manifest_final.json  implementation_summary.json  mt5_bridge.py  mt5_bridge_production.py  pulse_config.yaml  pulse_config_final.yaml  pulse_dashboard.py  pulse_kernel.py  pulse_ui_enhanced.py  risk_enforcer.py  streamlit_ui_config.json  telegram_flowchart.json  test_pulse_complete_integration.py  test_pulse_integration.py
_schema/: GPT_Instructions_1.1.md  pulse.detail.schema.json  (+2 more)
actions/: README.md  (+3 more)
(+1070 files in other folders)
