[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zanalytics-pulse"
version = "0.1.0"
description = "Pulse realtime helpers and API schema for Whisperer/Actions"
readme = "README_PULSE.md"
requires-python = ">=3.10"
authors = [
  { name = "Zanalytics", email = "dev@zanalytics.app" }
]
license = { text = "Proprietary" }
dependencies = [
  "redis>=4.5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pulse*"]

